🐛 fix :: [project] :: correções finais